added timer and hid and displayed questions

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
     <!-- shortcut to comment on any file type ctrl+/ -->
@@ -12,15 +13,16 @@
     <div>
         <h1>Welcome To My Trivia Quiz<h1>
         <button id="startBtn">Start</button>
-    </div>
+        <h2 id="countdown"></h2>
+        </div>
 
     <!-- question section -->
-    <div>
+    <div id="questions">
         <h2 id="question">This will be the question</h2>
         <button id="choiceOne">These will be the choices</button><br>
-        <button>These will be the choices</button><br>
-        <button>These will be the choices</button><br>
-        <button>These will be the choices</button><br>
+        <button id="choiceTwo">These will be the choices</button><br>
+        <button id="choiceThree">These will be the choices</button><br>
+        <button id="choiceFour">These will be the choices</button><br>
     </div>
 
     <script src="./script.js"></script>
